DigicielFull/force-app/main/default/objects/SME_Opportunity__c/SME_Opportunity__c.object-meta.xml
<CustomObject>
    <label>SME Opportunity</label>
    <nameField>
        <label>SME Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SME Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>