DigicielFull/force-app/main/default/objects/SME_Opportunity__c/fields/Data_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Data_Bundle__c</fullName>
    <label>Data Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Smart - 800MB</fullName>
            </value>
            <value>
                <fullName>Data Smart Plus - 1.6GB</fullName>
            </value>
            <value>
                <fullName>Data Light - 3.1GB</fullName>
            </value>
            <value>
                <fullName>Data Active - 5GB</fullName>
            </value>
            <value>
                <fullName>Data Heavy - 7.6GB</fullName>
            </value>
            <value>
                <fullName>Data Max - 16.4GB</fullName>
            </value>
            <value>
                <fullName>20GB</fullName>
            </value>
            <value>
                <fullName>40GB</fullName>
            </value>
            <value>
                <fullName>80GB</fullName>
            </value>
            <value>
                <fullName>1Mbps Unlimited</fullName>
            </value>
            <value>
                <fullName>2Mbps Unlimited</fullName>
            </value>
            <value>
                <fullName>4Mbps Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>