DigicielFull/force-app/main/default/objects/SME_Opportunity__c/fields/Deposit_Ammount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Ammount__c</fullName>
    <formula>TOT_MON_AMM__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Ammount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>