DigicielFull/force-app/main/default/objects/SME_Opportunity__c/fields/Hardware_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Cost__c</fullName>
    <label>Hardware Cost</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>