DigicielFull/force-app/main/default/objects/SME_Opportunity__c/fields/Monthly_Data_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Data_Cost__c</fullName>
    <formula>IF(ISPICKVAL(Data_Bundle__c ,&apos;Data Smart - 800MB&apos;),49,
IF(ISPICKVAL(Data_Bundle__c ,&apos;Data Smart Plus - 1.6GB&apos;),99,
IF(ISPICKVAL(Data_Bundle__c ,&apos;Data Light - 3.1GB&apos;),189,
IF(ISPICKVAL(Data_Bundle__c ,&apos;Data Active - 5GB&apos;),299,
IF(ISPICKVAL(Data_Bundle__c ,&apos;Data Heavy - 7.6GB&apos;),449,
IF(ISPICKVAL(Data_Bundle__c ,&apos;Data Max - 16.4GB&apos;),899,
IF(ISPICKVAL(Data_Bundle__c ,&apos;20GB&apos;),1095,
IF(ISPICKVAL(Data_Bundle__c ,&apos;40GB&apos;),2190,
IF(ISPICKVAL(Data_Bundle__c ,&apos;80GB&apos;),4096,
IF(ISPICKVAL(Data_Bundle__c ,&apos;1Mbps Unlimited&apos;),4000,
IF(ISPICKVAL(Data_Bundle__c ,&apos;2Mbps Unlimited&apos;),8000,
IF(ISPICKVAL(Data_Bundle__c ,&apos;4Mbps Unlimited&apos;),14000,0))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Monthly Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>