DigicielFull/force-app/main/default/objects/SME_Opportunity__c/fields/TOT_MON_AMM__c.field-meta.xml
<CustomField>
    <fullName>TOT_MON_AMM__c</fullName>
    <formula>Monthly_Data_Cost__c +  Voice_Monthly_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Ammount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>