DigicielFull/force-app/main/default/objects/SME_Opportunity__c/fields/Total_Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Payable__c</fullName>
    <formula>Hardware_Cost__c +  Deposit_Ammount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>