DigicielFull/force-app/main/default/objects/SME_Opportunity__c/fields/Voice_Bundle_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Voice_Bundle_Monthly_Fee__c</fullName>
    <label>Voice Bundle Monthly Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>