DigicielFull/force-app/main/default/objects/SME_Opportunity__c/fields/Voice_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Voice_Monthly_Fee__c</fullName>
    <formula>IF(ISPICKVAL(Voice_Bundle__c ,&apos;Access - No Minutes&apos;),33,
IF(ISPICKVAL(Voice_Bundle__c ,&apos;Plus - 140 minutes&apos;),65,
IF(ISPICKVAL(Voice_Bundle__c ,&apos;Chrome - 160 Minutes&apos;),99,
IF(ISPICKVAL(Voice_Bundle__c ,&apos;Silver - 280 Minutes&apos;),140,
IF(ISPICKVAL(Voice_Bundle__c ,&apos;Gold - 740 Minutes&apos;),199,
IF(ISPICKVAL(Voice_Bundle__c ,&apos;Platinum - 1,440 Minutes&apos;),500,0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voice Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>